Fixed li alignment in navmenu

--- a/DigiTellus.css
+++ b/DigiTellus.css
@@ -39,34 +39,39 @@ header img {
 }
 ul {
   list-style-type: none;
-  margin: 0 auto;
-  padding: 0;
+  margin: 0px;
+  /*padding: 0;*/
   text-align: center;
   /*width: 100%;*/
   background-color: rgba(30, 80, 30, 1);
-  /*border:1px solid blue;*/
-  height: 20px;
+  border:2px solid grey;
+  height: auto;
   /*margin-left: 20px;*/
 }
 
 li {
-  display: inline;
+  display: inline-block;
   /*float: left;*/
   border: 2px solid grey;
   background: rgba(30, 80, 30, 1);
-  margin-top: 10px;
+  margin:auto;
 }
 
 li a {
   /*display: block;*/
   /*background-color: blue;*/
   color: #000;
-  padding: 8px 16px;
+  padding: 1px 10px;
   text-decoration: none;
+  margin-top: 10px;
 }
 
 /* Change the link color on hover */
 li a:hover {
   background-color: #555;
   color: white;
+}
+
+body {
+	background-color: linen;
 }
